Fixed bug where long words were not wrapped in messages

--- a/we-talk/src/chat-view/chat-view.css
+++ b/we-talk/src/chat-view/chat-view.css
@@ -139,7 +139,7 @@ body {
     font-size: 12pt;
     line-height: 15pt;
     color: black;
-    
+    word-break: break-word;
     margin: 0 0 10px 0;
 }
 .msg:first-of-type {
